# Theme-Park-Mini-Operating-System-

./: .gitignore  README.md
Scheduler_And_Rides/: CMakeLists.txt  README.md  simulation_notes.txt
Scheduler_And_Rides/include/: Guest.h  MemoryManager.h  Ride.h  Simulation.h
Scheduler_And_Rides/src/: Guest.cpp  MemoryManager.cpp  Ride.cpp  Simulation.cpp  main.cpp
Source/: ExampleScenario.cpp  MemoryManager.cpp
Theme-Park-Mini-Operating-System--paced/Scheduler_And_Rides/include/: Scheduler.h
Theme-Park-Mini-Operating-System--paced/Scheduler_And_Rides/src/: ScenarioData.cpp  Simulation.cpp  main.cpp
Theme-Park-Mini-Operating-System--paced/Source/: ExampleScenario.h  GuestProcess.h  Logger.cpp  MemoryManager.h
Theme-Park-Mini-Operating-System--paced/Source/tests/: test.cpp
Theme-Park-Mini-Operating-System--paced/osproject/osproject/: osproject.vcxproj
Theme-Park-Mini-Operating-System-Main/: LICENSE
Theme-Park-Mini-Operating-System-Main/Scheduler_And_Rides/: README.md
Theme-Park-Mini-Operating-System-Main/Scheduler_And_Rides/include/: Ride.h  ScenarioData.h  Simulation.h
Theme-Park-Mini-Operating-System-Main/Source/: Logger.h
Theme-Park-Mini-Operating-System-Main/osproject/osproject/: guest.h
osproject/: osproject.sln
osproject/osproject/: guest.cpp  guest.h  main.cpp  osproject.vcxproj.filters
